--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,16 @@
 buildscript {
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
+        // maven { url 'https://maven.google.com' }
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-    }
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.3'
+    }    
 }
 
 allprojects {
