--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,5 +70,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-messaging'
 }
 // apply plugin: 'com.google.gms.google-services'
