current location and loader and stuff

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   provider:
   firebase_messaging:
   http:
+  geolocator: ^4.0.3
+  geocoder:
+
   # animated_theme_switcher: ^1.0.5
 
 dev_dependencies:
